# komodo-ecom

./: .gitignore  Brewfile  CLAUDE.md  Justfile  Makefile  README.md  docker-compose.yml  local_demo.sh
.agents/: advisor.md  swe.md
.claude/: hooks  settings.json  settings.local.json.example  standards
.claude/agents/: advisor.md  architect  architect.md  botanist  customer-servicing  devops  electrical-engineer  lawyer  marketing  mechatronics  project-manager  quality-assurance  robotics  sales  swe  swe.md  warehouse-manager
.claude/skills/: add-route.md  agriculture  (+13 more)
apis/: TODO.md
apis/komodo-shop-inventory-api/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  go.mod  main.go  openapi.yaml
apis/komodo-shop-inventory-api/docs/: PRD.md  openapi.yaml
apis/komodo-shop-inventory-api/e2e/: mod.rs  suite_test.go
apis/komodo-shop-inventory-api/internal/config/: validation_rules.yaml
apis/komodo-shop-inventory-api/pkg/v1/models/: errors.go
apis/komodo-shop-inventory-api/src/: errors.rs
apis/komodo-shop-inventory-api/src/handlers/: inventory.rs
apis/komodo-shop-inventory-api/src/models/: inventory.rs  mod.rs  shop_item.rs
apis/komodo-shop-inventory-api/src/test_common/: mod.rs
apis/komodo-shop-inventory-api/tests/: health_test.rs  inventory_read_test.rs  inventory_update_test.rs  mod.rs
apis/komodo-shop-inventory-api/tests/common/: mod.rs
deploy/: README.md
docs/: DB_SCHEMAS.md  HLA.md  LLA.md  PRD.md  ROUTES.md
infra/: TODO.md
ui/: CLAUDE.md  TODO.md  eslint.config.js  package.json  svelte.config.js  tsconfig.json  vite.config.ts
(+628 files in other folders)
