[package]
name = "komodo-shop-inventory-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
aws-config = "1"
aws-sdk-dynamodb = "1"
aws-sdk-secretsmanager = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }
validator = { version = "0.18", features = ["derive"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
axum-test = "14"
